# slint-ws-pico-restouch-35

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: bin.rs  lib.rs  main.rs  xpt2046.rs
ui/: main.slint
