[package]
edition = "2021"
name = "rp2040-ws-lcd-35-slint"
version = "0.1.0"
publish = false

[dependencies]
# Needed for our allocator
embedded-alloc = "0.5.0"
alloc-cortex-m = "0.4.2"

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.7"

# mipidsi = "0.6.0"
mipidsi = { git = "https://github.com/9names/mipidsi", branch = "pico-restouch-lcd-3-5" }
display-interface-spi = "0.4.1"
embedded-graphics = { version = "0.7.1", features =["fixed_point"] }
fugit = "0.3.6"
shared-bus = "0.2.5"

[dependencies.slint]
version = "1.0.0"
default-features = false
features = ["compat-1-0", "unsafe-single-threaded", "libm"]

[build-dependencies]
slint-build = "1.0.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
